--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,7 @@
 //@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "vendor/literallycanvas/literallycanvas.css";
 @import "vendor/sweetalert/sweetalert.css";
+@import "modules.css";
 
 h4.page-title{
 	margin-top: 0;
