--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,6 +26,16 @@ h4.page-title{
    top: -9999px !important;
    left: -9999px !important;
 }
+.fade50{
+	opacity: 0.5;
+}
+
+/*FlatUi PRO Override*/
+.table.joblist [class*=fui-] {
+    margin: -22.5px 0 0;
+    font-size: 11px;
+}
+
 
 /*Bootstrap Override:;*/
 
