--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,7 @@
  *
  * @import "tailwindcss/base";
  */
-@tailwind base;
+@import "tailwindcss/base";
 
 /**
  * This injects any component classes registered by plugins.
@@ -18,7 +18,7 @@
  *
  * @import "tailwindcss/components";
  */
-@tailwind components;
+@import "tailwindcss/components";
 
 /**
  * Here you would add any of your custom component classes; stuff that you'd
@@ -32,9 +32,11 @@
  *
  * Or if using a preprocessor or `postcss-import`:
  *
- * @import "components/buttons";
- * @import "components/forms";
- */
+ *  */
+@import "buttons";
+@import "form";
+@import "nprogress";
+
 
 /**
  * This injects all of Tailwind's utility classes, generated based on your
@@ -44,7 +46,7 @@
  *
  * @import "tailwindcss/utilities";
  */
-@tailwind utilities;
+@import "tailwindcss/utilities";
 
 /**
  * Here you would add any custom utilities you need that don't come out of the
@@ -60,3 +62,13 @@
  * @import "utilities/background-patterns";
  * @import "utilities/skew-transforms";
  */
+.ProseMirror{
+	@apply .p-4;
+	min-height: 8rem;
+}
+.ProseMirror:focus{
+	@apply outline-none bg-white border-gray-500;
+}
+.ProseMirror p{
+	@apply mb-2;
+}
